--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,44 @@
 *::before {
   margin: 0;
   padding: 0;
-  box-sizing: inherit;
-}
+  box-sizing: inherit; }
 
 html {
-  font-size: 62.5%;
-}
+  font-size: 62.5%; }
+
+body {
+  box-sizing: border-box; }
+
+.header {
+  height: 95vh;
+  position: relative;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
+  background-size: cover;
+  background-position: top;
+  clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%); }
+  .header__logo-box {
+    position: absolute;
+    top: 4rem;
+    left: 4rem; }
+  .header__logo {
+    position: relative;
+    height: 3.5rem; }
+  .header__text-box {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center; }
+
+.two-col {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around; }
+  .two-col .first-item {
+    flex-basis: 50rem; }
+  .two-col .second-item {
+    flex-basis: 40rem;
+    margin-right: 10rem; }
 
 body {
   font-family: "lato", sans-serif;
@@ -16,101 +48,90 @@ body {
   /* font-size: 16px;*/
   color: #777;
   line-height: 1.7;
-  padding: 3rem;
-  box-sizing: border-box;
-}
-
-.header {
-  height: 95vh;
-  position: relative;
-  background-image: linear-gradient(
-      to right bottom,
-      rgba(128, 213, 111, 0.8),
-      rgba(6, 90, 34, 0.8)
-    ),
-    url(../img/hero.jpg);
-  background-size: cover;
-  background-position: top;
-  clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-}
-
-.header__logo-box {
-  position: absolute;
-  top: 4rem;
-  left: 4rem;
-  transition: 0.3s;
-}
-
-.header__logo {
-  position: relative;
-  height: 3.5rem;
-  transition: all 0.2s;
-}
-
-.header__text-box {
-  position: absolute;
-  top: 45%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
+  padding: 3rem; }
 
 .heading-primary {
-  color: rgb(253, 251, 251);
+  color: #fff;
   text-transform: uppercase;
-  margin-bottom: 6rem;
-}
+  margin-bottom: 6rem; }
+  .heading-primary--main {
+    display: block;
+    font-size: 6rem;
+    font-weight: 400;
+    letter-spacing: 3rem;
+    animation-name: moveinleft;
+    animation-duration: 1s; }
+  .heading-primary--sub {
+    display: block;
+    font-size: 2rem;
+    font-weight: 700;
+    letter-spacing: 1.5rem;
+    animation-name: moveinright;
+    animation-duration: 1s;
+    padding-right: 1rem; }
 
-.heading-primary--main {
-  display: block;
-  font-size: 6rem;
-  font-weight: 400;
-  letter-spacing: 3rem;
-  animation-name: moveinleft;
-  animation-duration: 1s;
-}
-
-.heading-primary--sub {
-  display: block;
-  font-size: 2rem;
+.heading-secondary {
+  display: inline-block;
+  font-size: 3.5rem;
+  text-transform: uppercase;
   font-weight: 700;
-  letter-spacing: 1.5rem;
-  animation-name: moveinright;
-  animation-duration: 1s;
-}
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: 0.2rem;
+  transition: all 0.2s; }
+  .heading-secondary:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1, 1);
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+
+.heading-tertiary {
+  font-size: 1.6rem;
+  font-weight: 700;
+  text-transform: uppercase; }
+
+.paragraph {
+  font-size: 1.6rem; }
+  .paragraph:not(:last-child) {
+    margin-bottom: 3rem; }
 
 @keyframes moveinleft {
   0% {
     opacity: 0;
-    transform: translateY(-10rem);
-  }
-
+    transform: translateY(-10rem); }
   80% {
-    transform: translateY(1rem);
-  }
+    transform: translateY(1rem); }
   100% {
     opacity: 1;
-    transform: translateY(0);
-  }
-}
+    transform: translateY(0); } }
 
 @keyframes moveinright {
   0% {
     opacity: 0;
-    transform: translateY(10rem);
-  }
-
+    transform: translateY(10rem); }
   80% {
-    transform: translateY(-1rem);
-  }
+    transform: translateY(-1rem); }
   100% {
     opacity: 1;
-    transform: translateY(0);
-  }
-}
+    transform: translateY(0); } }
 
-.btn:link,
-.btn:visited {
+@keyframes moveinbottom {
+  0% {
+    opacity: 0;
+    transform: translateY(3rem); }
+  100% {
+    opacity: 1;
+    transform: translateY(0); } }
+
+.center-text {
+  text-align: center; }
+
+.margin-bottom-big {
+  margin-bottom: 8rem; }
+
+.margin-bottom-small {
+  margin-bottom: 1.5rem; }
+
+.btn:link, .btn:visited {
   position: relative;
   font-size: 1.6rem;
   text-transform: uppercase;
@@ -118,17 +139,18 @@ body {
   padding: 1.5rem 4rem;
   display: inline-block;
   border-radius: 10rem;
-  transition: transform 0.2s;
-}
+  transition: transform 0.2s; }
 
 .btn:hover {
   transform: translateY(-0.3rem);
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
-}
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
+  .btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0; }
+
 .btn:active {
   transform: translateY(-0.1rem);
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
-}
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
 
 .btn::after {
   content: "";
@@ -140,36 +162,65 @@ body {
   width: 100%;
   border-radius: 10rem;
   z-index: -1;
-  transition: all 0.4s;
-}
-
-.btn:hover::after {
-  transform: scaleX(1.4) scaleY(1.6);
-  opacity: 0;
-}
+  transition: all 0.4s; }
 
 .btn--white {
-  background-color: rgb(255, 255, 255);
-  color: rgb(119, 119, 119);
-}
-
-.btn--white::after {
-  background-color: rgb(255, 255, 255);
-}
+  background-color: #fff;
+  color: #777; }
+  .btn--white::after {
+    background-color: #fff; }
 
 .btn--animated {
   animation: moveinbottom 0.5s ease-out 0.7s;
-  animation-fill-mode: backwards;
-}
+  animation-fill-mode: backwards; }
 
-@keyframes moveinbottom {
-  0% {
-    opacity: 0;
-    transform: translateY(3rem);
-  }
+.btn-text:link, .btn-text:visited {
+  font-size: 1.6rem;
+  display: inline-block;
+  text-decoration: none;
+  color: #55c57a;
+  border-bottom: 1px solid #55c57a;
+  padding: 3px;
+  transition: all 0.2s; }
 
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
+.btn-text:hover {
+  transform: translateY(-0.2rem);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  background-color: #55c57a;
+  color: #fff; }
+
+.btn-text:active {
+  transform: translateY(0);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1); }
+
+.composition {
+  position: relative; }
+  .composition_photo {
+    max-width: 55%;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+    border-radius: 2px;
+    position: absolute;
+    z-index: 10;
+    transition: all 0.2s;
+    outline-offset: 2rem; }
+    .composition_photo--p1 {
+      left: 0;
+      top: -2rem; }
+    .composition_photo--p2 {
+      right: 0;
+      top: 2rem; }
+    .composition_photo--p3 {
+      left: 5rem;
+      top: 10rem; }
+    .composition_photo:hover {
+      outline: 1.5rem solid #55c57a;
+      transform: scale(1.1);
+      box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
+      z-index: 20; }
+  .composition:hover .composition_photo:not(:hover) {
+    transform: scale(0.9); }
+
+.section-about {
+  background-color: #f7f7f7;
+  padding: 25rem 0;
+  margin-top: -20vh; }
