--- a/css/style.css
+++ b/css/style.css
@@ -27,18 +27,15 @@ body {
   background-position: top;
   clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
 }
-
 .header__logo-box {
   position: absolute;
   top: 4rem;
   left: 4rem;
 }
-
 .header__logo {
   position: relative;
   height: 3.5rem;
 }
-
 .header__text-box {
   position: absolute;
   top: 45%;
@@ -57,11 +54,9 @@ body {
   flex-direction: row;
   justify-content: space-between;
 }
-
 .flex-items .first-item {
   flex-basis: 50rem;
 }
-
 .flex-items .second-item {
   flex-basis: 50rem;
   margin-left: 10rem;
@@ -81,7 +76,6 @@ body {
   text-transform: uppercase;
   margin-bottom: 6rem;
 }
-
 .heading-primary--main {
   display: block;
   font-size: 6rem;
@@ -90,7 +84,6 @@ body {
   animation-name: moveinleft;
   animation-duration: 1s;
 }
-
 .heading-primary--sub {
   display: block;
   font-size: 2rem;
@@ -112,7 +105,6 @@ body {
   letter-spacing: 0.2rem;
   transition: all 0.2s;
 }
-
 .heading-secondary:hover {
   transform: skewY(2deg) skewX(15deg) scale(1, 1);
   text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2);
@@ -182,6 +174,10 @@ body {
   margin-bottom: 1.5rem;
 }
 
+.margin-top-big {
+  margin-top: 8rem;
+}
+
 .btn:link,
 .btn:visited {
   position: relative;
@@ -229,6 +225,14 @@ body {
   background-color: #fff;
 }
 
+.btn--green {
+  background-color: #55c57a;
+  color: #fff;
+}
+.btn--green::after {
+  background-color: #55c57a;
+}
+
 .btn--animated {
   animation: moveinbottom 0.5s ease-out 0.7s;
   animation-fill-mode: backwards;
@@ -260,7 +264,6 @@ body {
 .composition {
   position: relative;
 }
-
 .composition_photo {
   max-width: 55%;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
@@ -270,29 +273,24 @@ body {
   transition: all 0.2s;
   outline-offset: 2rem;
 }
-
 .composition_photo--p1 {
   left: 0;
   top: -2rem;
 }
-
 .composition_photo--p2 {
   right: 0;
   top: 2rem;
 }
-
 .composition_photo--p3 {
   left: 5rem;
   top: 10rem;
 }
-
 .composition_photo:hover {
   outline: 1.5rem solid #55c57a;
   transform: scale(1.1);
   box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
   z-index: 20;
 }
-
 .composition:hover .composition_photo:not(:hover) {
   transform: scale(0.9);
 }
@@ -307,11 +305,9 @@ body {
   transition: all 0.3s;
   flex-basis: 23rem;
 }
-
 .feature-box:not(:nth-last-child(1)) {
   margin-right: 1rem;
 }
-
 .feature-box_icon {
   font-size: 6rem;
   margin-bottom: 0.5rem;
@@ -319,10 +315,144 @@ body {
   -webkit-background-clip: text;
   color: transparent;
 }
-
 .feature-box:hover {
   transform: translateY(-1.5rem) scale(1.03);
   box-shadow: 0 1.5rem 8rem rgba(0, 0, 0, 0.3);
+}
+
+.card {
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+  position: relative;
+  height: 50rem;
+  width: 30rem;
+}
+.card_side {
+  height: 50rem;
+  width: 30rem;
+  transition: all 0.8s ease;
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  backface-visibility: hidden;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+}
+.card_side--front {
+  background-color: #fff;
+}
+.card_side--back {
+  transform: rotateY(180deg);
+}
+.card_side--back-1 {
+  background-image: linear-gradient(to right bottom, #ffb900, #ff7730);
+}
+.card_side--back-2 {
+  background-image: linear-gradient(to right bottom, #7ed56f, #28b485);
+}
+.card_side--back-3 {
+  background-image: linear-gradient(to right bottom, #2998ff, #5643fa);
+}
+.card:hover .card_side--front {
+  transform: rotateY(-180deg);
+}
+.card:hover .card_side--back {
+  transform: rotateY(0);
+}
+.card_picture {
+  background-size: cover;
+  height: 23rem;
+  background-blend-mode: screen;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+}
+.card_picture--1 {
+  background-image: linear-gradient(to right bottom, #ffb900, #ff7730),
+    url(../img/nat-5.jpg);
+}
+.card_picture--2 {
+  background-image: linear-gradient(to right bottom, #7ed56f, #28b485),
+    url(../img/nat-5.jpg);
+}
+.card_picture--3 {
+  background-image: linear-gradient(to right bottom, #2998ff, #5643fa),
+    url(../img/nat-5.jpg);
+}
+.card_heading {
+  font-size: 2.8rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  color: #fff;
+  text-align: right;
+  position: absolute;
+  top: 12rem;
+  right: 2.5rem;
+  width: 65%;
+}
+.card_heading-span {
+  padding: 1rem 1.5rem;
+  -webkit-box-decoration-break: clone;
+}
+.card_heading-span--1 {
+  background-image: linear-gradient(
+    to right bottom,
+    rgba(255, 185, 0, 0.85),
+    rgba(255, 119, 48, 0.85)
+  );
+}
+.card_heading-span--2 {
+  background-image: linear-gradient(
+    to right bottom,
+    rgba(126, 213, 111, 0.85),
+    rgba(40, 180, 133, 0.85)
+  );
+}
+.card_heading-span--3 {
+  background-image: linear-gradient(
+    to right bottom,
+    rgba(41, 152, 255, 0.85),
+    rgba(86, 67, 250, 0.85)
+  );
+}
+.card_details {
+  padding: 3rem;
+}
+.card_details ul {
+  list-style: none;
+  width: 80%;
+  margin: 0 auto;
+}
+.card_details ul li {
+  text-align: center;
+  font-size: 1.5rem;
+  padding: 1rem;
+}
+.card_details ul li:not(:last-child) {
+  border-bottom: 1px solid #eee;
+}
+.card_cta {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  text-align: center;
+}
+.card_price-box {
+  color: #fff;
+  text-align: center;
+}
+.card_price-only {
+  font-size: 1.4rem;
+  text-transform: uppercase;
+}
+.card_price-value {
+  font-size: 6rem;
+  font-weight: 100;
+  margin-bottom: 8rem;
 }
 
 .section-about {
@@ -343,7 +473,12 @@ body {
   background-size: cover;
   transform: skewY(-7deg);
 }
-
 .section-features > * {
   transform: skewY(7deg);
+}
+
+.section-tours {
+  background-color: #f7f7f7;
+  padding: 25rem 0 15rem 0;
+  margin-top: -20vh;
 }
