--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -7,6 +7,10 @@
 .margin-bottom-small {
   margin-bottom: 1.5rem;
 }
+
+.margin-bottom-medium {
+  margin-bottom: 4rem;
+}
 .margin-top-big {
   margin-top: 8rem;
 }
