--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+  &,
   &:link,
   &:visited {
     position: relative;
@@ -9,6 +10,10 @@
     display: inline-block;
     border-radius: 10rem;
     transition: transform 0.2s;
+
+    //Changes for <button>
+    border: none;
+    cursor: pointer;
   }
 
   &:hover {
@@ -19,7 +24,10 @@
       opacity: 0;
     }
   }
-  &:active {
+
+  &:active,
+  &:focus {
+    outline: none;
     transform: translateY(-0.1rem);
     box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
   }
