--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,5 +13,8 @@
 @import "components/composition";
 @import "components/feature-box";
 @import "components/card";
+@import "components/story";
+@import "components/bg-video";
+@import "components/form";
 
 @import "pages/home";
