--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,45 @@ body {
   .flex-items .second-item {
     flex-basis: 50rem;
     margin-left: 10rem; }
+  .flex-items .third-item {
+    flex-basis: 35rem; }
+  .flex-items .fourth-item {
+    flex-basis: 51rem; }
+
+.footer {
+  background-color: #333;
+  padding: 10rem 0;
+  font-size: 1.4rem; }
+  .footer_logo-box {
+    text-align: center;
+    margin-bottom: 8rem; }
+  .footer_logo {
+    width: 15rem;
+    height: auto; }
+  .footer_navigation {
+    border-top: 1px solid #777;
+    padding-top: 2rem; }
+  .footer_link:link, .footer_link:visited {
+    color: #eee;
+    text-decoration: none;
+    text-transform: uppercase;
+    display: inline-block;
+    transition: all 0.2s; }
+  .footer_link:hover, .footer_link:active {
+    color: #55c57a;
+    background-color: #333;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
+    transform: rotate(5deg) scale(1.3); }
+  .footer_item {
+    display: inline-block; }
+    .footer_item:not(:last-child) {
+      margin-right: 1.3rem; }
+  .footer_list {
+    list-style: none; }
+  .footer_copyright {
+    color: #eee;
+    border-top: 1px solid #777;
+    padding-top: 2rem; }
 
 body {
   font-family: "lato", sans-serif;
