--- a/sass/layout/_flex.scss
+++ b/sass/layout/_flex.scss
@@ -15,4 +15,10 @@
     flex-basis: 50rem;
     margin-left: 10rem;
   }
+  .third-item {
+    flex-basis: 35rem;
+  }
+  .fourth-item {
+    flex-basis: 51rem;
+  }
 }
