--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -9,6 +9,7 @@ $color-tertiary-dark: #5643fa;
 $color-primary-dark: #28b485;
 $color-dark-gray: #777;
 $color-dark-gray-2: #999;
+$color-dark-gray-3: #333;
 $color-gray-light-1: #f7f7f7;
 $color-gray-light-2: #eee;
 $color-white: #fff;
