--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 
 @import "layout/header";
 @import "layout/flex";
+@import "layout/footer";
 
 @import "base/typography";
 @import "base/animations";
