--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,7 +4,6 @@ body {
   /* font-size: 16px;*/
   color: $color-dark-gray;
   line-height: 1.7;
-  padding: 3rem;
 }
 
 .heading-primary {
@@ -19,6 +18,11 @@ body {
     letter-spacing: 3rem;
     animation-name: moveinleft;
     animation-duration: 1s;
+
+    @include respond(phone) {
+      letter-spacing: 1rem;
+      font-size: 5rem;
+    }
   }
 
   &--sub {
@@ -29,6 +33,10 @@ body {
     animation-name: moveinright;
     animation-duration: 1s;
     padding-right: 1rem;
+
+    @include respond(phone) {
+      letter-spacing: 0.5rem;
+    }
   }
 }
 
@@ -46,6 +54,14 @@ body {
   color: transparent;
   letter-spacing: 0.2rem;
   transition: all 0.2s;
+
+  @include respond(tab-port) {
+    font-size: 3rem;
+  }
+
+  @include respond(phone) {
+    font-size: 2.5rem;
+  }
 
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1, 1);
