--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -13,4 +13,12 @@
 }
 .margin-top-big {
   margin-top: 8rem;
+
+  @include respond(tab-port) {
+    margin-top: 4rem;
+  }
+
+  @include respond(phone) {
+    margin-top: 4rem;
+  }
 }
