--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -4,12 +4,11 @@
   perspective: 150rem;
   -moz-perspective: 150rem;
   position: relative;
-  height: 50rem;
-  width: 30rem;
-
+  width: 90%;
+  height: 52rem;
   &_side {
-    height: 50rem;
-    width: 30rem;
+    width: 90%;
+    height: 52rem;
     transition: all 0.8s ease;
     position: absolute;
     top: 0;
@@ -64,8 +63,8 @@
 
   &_picture {
     background-size: cover;
-    height: 23rem;
-    width: 100%;
+    min-height: 23rem;
+    max-width: 100%;
     background-blend-mode: screen;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
@@ -110,6 +109,9 @@
     top: 12rem;
     right: 2.5rem;
     width: 65%;
+    @include respond(small-device) {
+      width: 80%;
+    }
   }
 
   &_heading-span {
@@ -184,5 +186,63 @@
     font-size: 6rem;
     font-weight: 100;
     margin-bottom: 8rem;
+  }
+
+  @include respond(tab-port) {
+    height: auto;
+    width: 60%;
+    margin-left: 25rem;
+    margin-bottom: 3rem;
+    border-radius: 3px;
+
+    @include respond(phone) {
+      margin-left: 13rem;
+      width: 70%;
+    }
+
+    @include respond(small-device) {
+      margin-left: 3rem;
+      width: 100%;
+    }
+
+    &_side {
+      width: 70%;
+      position: relative;
+      height: auto;
+
+      @include respond(phone) {
+        width: 80%;
+      }
+
+      &--back {
+        transform: rotate(0);
+      }
+    }
+
+    &:hover &_side--front {
+      transform: rotateY(0);
+    }
+
+    &:hover &_side--back {
+      transform: rotateY(0);
+    }
+
+    &_cta {
+      position: relative;
+      top: 0rem;
+      left: 0;
+      transform: translate(0);
+      width: 100%;
+      padding: 7rem 4rem 4rem 4rem;
+      text-align: center;
+    }
+
+    &_price-box {
+      margin-bottom: -5rem;
+    }
+
+    &_price-value {
+      font-size: 6rem;
+    }
   }
 }
