--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -12,6 +12,13 @@
     margin-right: 1rem;
   }
 
+  @include respond(tab-port) {
+    &:not(:nth-last-child(1)) {
+      margin-right: 0rem;
+      margin-bottom: 2rem;
+    }
+  }
+
   &_icon {
     font-size: 6rem;
     margin-bottom: 0.5rem;
