--- a/sass/layout/_popup.scss
+++ b/sass/layout/_popup.scss
@@ -51,11 +51,21 @@
     opacity: 0;
     transform: translate(-50%, -50%) scale(0.25);
     transition: all 0.5s 0.1s;
+
+    @include respond(tab-port) {
+      display: flex;
+      flex-direction: column-reverse;
+    }
   }
 
   &_left {
     width: 33.333333%;
     display: table-cell;
+
+    @include respond(tab-port) {
+      display: flex;
+      width: 50%;
+    }
   }
 
   &_right {
@@ -63,11 +73,19 @@
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem;
+
+    @include respond(tab-port) {
+      width: 100%;
+    }
   }
 
   &_img {
     display: block;
     width: 100%;
+
+    @include respond(tab-port) {
+      display: inline;
+    }
   }
 
   &_text {
@@ -84,5 +102,9 @@
     -moz-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto;
+
+    @include respond(tab-port) {
+      column-count: 1;
+    }
   }
 }
