--- a/sass/layout/_popup.scss
+++ b/sass/layout/_popup.scss
@@ -1,13 +1,14 @@
 .popup {
   height: 100vh;
   width: 100%;
-  background-color: rgba($color-black, 0.8);
+  background-color: rgba($color-black, 0.4);
   position: fixed;
   top: 0;
   left: 0;
   z-index: 3000;
   opacity: 0;
   visibility: hidden;
+  backdrop-filter: blur(1rem);
 
   &:target {
     opacity: 1;
